<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="calcwiki">计算器百科</string>
    <string name="edit">编辑</string>
    <string name="not_login">未登录</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="account_manage">账户管理</string>
    <string name="no_network">无网络连接</string>
    <string name="email">电子邮件</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="please_cleck_network">请检查网络连接</string>
    <string name="main_page">首页</string>
    <string name="recent_changes">最近更改</string>
    <string name="random_article">随机页面</string>
    <string name="help">帮助</string>
    <string name="interaction">导航</string>
    <string name="search">搜索</string>
    <string name="view_source">查看源代码</string>
    <string name="view_history">查看历史</string>
    <string name="move">移动</string>
    <string name="delete">删除</string>
    <string name="tip_login">欢迎来到计算器百科，请输入您的用户名和密码，然后点击[登录]按钮</string>
    <string name="remember_me">记住我的登录状态</string>
    <string name="forget_password">忘记密码 ？</string>
    <string name="create_account">创建账户</string>
    <string name="have_no_account">没有账户 ？</string>
    <string name="join_calcwiki">加入计算器百科</string>
    <string name="login_success">登录成功</string>
    <string name="login_failure">登录失败</string>
    <string name="username_can_not_be_empty">用户名不能为空</string>
    <string name="password_can_not_be_empty">密码不能为空</string>
    <string name="username_not_exist">用户名不存在</string>
    <string name="password_error">密码错误</string>
    <string name="unexpected_error_please_try_again">发生未知错误，请重试</string>
    <string name="logining">登录中</string>
    <string name="are_you_sure_logout">确认要注销吗 ？</string>
    <string name="no_person_data_will_be_persist_on_this_device">您的任何个人账户数据都不会被保留在此设备上</string>
    <string name="yes">确定</string>
    <string name="cancel">取消</string>
    <string name="logouting">注销中</string>
    <string name="type_password_again">请再次输入密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="email_address_optional">电子邮件地址（可选）</string>
    <string name="realname">真实姓名</string>
    <string name="realname_optional">真实姓名（可选）</string>
    <string name="create_your_account">创建您的账户</string>
    <string name="tip_register">计算器百科是由同你一样的人们构筑的。</string>
    <string name="tip_on_captcha">为保护本wiki免受自动程序的破坏，我们恳请你回答下面显示的问题：</string>
    <string name="your_answer">您的回答</string>
    <string name="continue_">继续</string>
    <string name="create_account_success">创建账户成功</string>
    <string name="username_exist">用户名已被使用</string>
    <string name="registering">正在创建账户</string>
    <string name="captcha_error">验证回答错误，请重试</string>
    <string name="username_invalid">用户名不合法</string>
    <string name="server_exception_and_try_again">服务器异常，请重试</string>
    <string name="password_can_not_same_as_username">密码不能与用户名相同</string>
    <string name="invalid_email_address_format">电子邮箱地址格式不正确</string>
    <string name="password_too_short">密码太短</string>
    <string name="confirm_password_different">两次密码输入不相同</string>
    <string name="create_page">创建页面</string>
    <string name="loading_more">加载更多…</string>
    <string name="not_found">在计算器百科上找不到您需要的条目，欢迎您贡献此条目</string>
    <string name="redirect_from">重定向自 </string>
    <string name="search_header_page_exist">计算器百科上有名为“%1$s”的页面</string>
    <string name="search_header_page_not_exist_but_createable">在计算器百科上新建名为“%1$s”的页面！</string>
    <string name="touch_title_to_expand_content">触摸每一小节的标题来展开本小节内容</string>
    <string name="tip_io_exception">发生 I/O 异常，您可能需要手动清理本地缓存，然后再试一次</string>
    <string name="tip_no_such_page"><![CDATA[本页面目前没有内容。您可以<font color="#0645AD">立即创建它</font>。]]></string>
    <string name="permission_denied">你没有本页面的访问权限</string>
    <string name="loading_user_info">正在获取用户信息...</string>
</resources>