<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_search"
          android:title="@string/search"
          android:icon="@drawable/ic_search_black_24dp"
          android:orderInCategory="10"
          app:showAsAction="always"/>

    <item android:id="@+id/action_edit"
          android:title="@string/edit"
          android:icon="@drawable/ic_mode_edit_black_24dp"
          android:orderInCategory="20"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_view_source"
          android:title="@string/view_source"
          android:icon="@drawable/ic_code_black_24dp"
          android:orderInCategory="21"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_history"
          android:title="@string/view_history"
          android:icon="@drawable/ic_restore_black_24dp"
          android:orderInCategory="30"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/action_move"
          android:title="@string/move"
          android:orderInCategory="70"
          app:showAsAction="never"/>

    <item android:id="@+id/action_delete"
          android:title="@string/delete"
          android:orderInCategory="80"
          app:showAsAction="never"/>

</menu>