<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/no_person_data_will_be_persist_on_this_device"
        android:textColor="@color/gray_900"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginRight="5dp"
        android:gravity="right">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_cancel"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/gray_700"
                android:textSize="15sp"/>

        </com.gc.materialdesign.views.ButtonFlat>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_yes"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textColor="@color/gray_800"
                android:textSize="15sp"/>

        </com.gc.materialdesign.views.ButtonFlat>

    </LinearLayout>

</LinearLayout>