<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="5dp"
        android:text="@string/tip_on_captcha"
        android:textSize="14sp"
        android:textColor="@color/gray_800"/>

    <TextView
        android:id="@+id/captcha_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="7dp"
        tools:text="测试问题"
        android:textSize="20sp"
        android:textColor="@color/gray_900"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/edittext_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginBottom="5dp"
        android:hint="@string/your_answer"
        app:met_baseColor="@color/gray_900"
        app:met_primaryColor="@color/gray_900"
        app:met_underlineColor="@color/gray_900"
        android:textColorHighlight="@color/gray_900"
        app:met_floatingLabelTextColor="@color/gray_900"
        app:met_errorColor="@color/red_500"
        android:inputType="text|textNoSuggestions"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical|right"
        android:layout_marginTop="7dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:layout_marginBottom="7dp">

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_cancel"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textColor="@color/gray_700"
                android:textSize="18sp"
                android:maxLines="1"/>

        </com.gc.materialdesign.views.ButtonFlat>

        <com.gc.materialdesign.views.ButtonFlat
            android:id="@+id/button_continue"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continue_"
                android:textColor="@color/gray_800"
                android:textSize="18sp"
                android:maxLines="1"/>

        </com.gc.materialdesign.views.ButtonFlat>

    </LinearLayout>

</LinearLayout>