<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:background="@color/gray_600">

        <LinearLayout
            android:id="@+id/account_manage_buttons_in_drawer_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:padding="5dp"
            android:orientation="horizontal">

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/login_button_in_drawer_main"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/gray_900"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/gray_400"
                    android:textSize="20sp"
                    android:maxLines="1"/>

            </com.gc.materialdesign.views.ButtonRectangle>

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/register_button_in_drawer_main"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/gray_900"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register"
                    android:textColor="@color/gray_400"
                    android:textSize="20sp"
                    android:maxLines="1"/>

            </com.gc.materialdesign.views.ButtonRectangle>

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/logout_button_in_drawer_main"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/gray_900"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logout"
                    android:textColor="@color/gray_400"
                    android:textSize="20sp"
                    android:maxLines="1"/>

            </com.gc.materialdesign.views.ButtonRectangle>

            <com.gc.materialdesign.views.ButtonRectangle
                android:id="@+id/account_manage_button_in_drawer_main"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/gray_900"
                android:padding="5dp"
                android:layout_margin="2dp"
                android:gravity="center"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/account_manage"
                    android:textColor="@color/gray_400"
                    android:textSize="20sp"
                    android:maxLines="1"/>

            </com.gc.materialdesign.views.ButtonRectangle>

        </LinearLayout>

        <TextView
            android:id="@+id/username_in_drawer_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/account_manage_buttons_in_drawer_main"
            android:text="@string/not_login"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:layout_margin="20dp"/>

    </RelativeLayout>

    <com.jude.easyrecyclerview.EasyRecyclerView
        android:id="@+id/menu_list_in_drawer_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:background="@color/white">

    </com.jude.easyrecyclerview.EasyRecyclerView>

</LinearLayout>